--- a/package.json
+++ b/package.json
@@ -19,98 +19,85 @@
     "postcommit": "git update-index --again"
   },
   "dependencies": {
-    "array.find": "^1.0.7",
-    "axios": "^0.17.1",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "classnames": "^2.2.5",
-    "dotenv": "^5.0.1",
-    "fetch-jsonp": "^1.1.3",
-    "history": "^4.7.2",
-    "html-react-parser": "^0.4.5",
-    "intl": "^1.2.5",
-    "moment": "^2.22.1",
-    "prop-types": "^15.6.1",
-    "qhistory": "^1.0.0",
-    "qs": "^6.5.2",
-    "react": "^16.3.2",
-    "react-autosuggest": "^9.3.4",
-    "react-copy-to-clipboard": "^5.0.1",
-    "react-custom-scrollbars": "^4.2.1",
-    "react-datepicker": "^1.4.1",
-    "react-dom": "^16.3.2",
-    "react-dropzone": "^4.2.9",
-    "react-full-screen": "^0.2.2",
-    "react-grid-layout": "^0.16.6",
-    "react-hot-loader": "^3.1.1",
-    "react-intl": "^2.4.0",
-    "react-redux": "^5.0.7",
-    "react-select": "^1.2.1",
-    "react-transition-group": "^2.3.1",
-    "redux": "^3.7.2",
-    "redux-devtools-extension": "^2.13.2",
-    "redux-first-router": "0.0.16-next",
-    "redux-first-router-link": "^1.4.2",
-    "redux-form": "^7.3.0",
-    "redux-saga": "^0.16.0",
-    "redux-thunk": "^2.2.0",
-    "reselect": "^3.0.1",
-    "reset-css": "^2.2.1",
-    "simplemde": "^1.11.2"
+    "array.find": "1.0.7",
+    "axios": "0.18.0",
+    "classnames": "2.2.6",
+    "dotenv": "5.0.1",
+    "html-react-parser": "0.4.7",
+    "intl": "1.2.5",
+    "moment": "2.22.2",
+    "prop-types": "15.6.2",
+    "react": "16.6.0",
+    "react-custom-scrollbars": "4.2.1",
+    "react-dom": "16.6.0",
+    "react-intl": "2.7.2",
+    "react-redux": "5.0.7",
+    "react-resizable": "^1.7.5",
+    "react-transition-group": "2.5.0",
+    "redux": "3.7.2",
+    "redux-actions": "2.6.4",
+    "redux-first-router": "2.1.1",
+    "redux-first-router-link": "2.0.2",
+    "redux-form": "7.4.2",
+    "redux-saga": "0.16.2",
+    "redux-thunk": "2.3.0",
+    "reselect": "4.0.0"
   },
   "devDependencies": {
-    "axios-mock-adapter": "^1.15.0",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^7.2.3",
-    "babel-jest": "^21.2.0",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-react-intl": "^2.3.1",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-airbnb": "^2.4.0",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-react-hmre": "^1.1.1",
-    "babel-register": "^6.26.0",
-    "clean-webpack-plugin": "^0.1.19",
-    "compression-webpack-plugin": "^1.1.11",
-    "css-loader": "^0.28.11",
-    "enzyme": "^3.2.0",
-    "enzyme-adapter-react-16": "^1.1.0",
-    "enzyme-to-json": "^3.3.3",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^15.0.1",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-import-resolver-webpack": "^0.8.3",
-    "eslint-loader": "^1.9.0",
-    "eslint-plugin-import": "^2.11.0",
-    "eslint-plugin-jsx-a11y": "^5.0.3",
-    "eslint-plugin-prettier": "^2.6.0",
-    "eslint-plugin-react": "^7.7.0",
-    "extract-text-webpack-plugin": "^3.0.1",
-    "file-loader": "^1.1.11",
+    "babel-cli": "6.26.0",
+    "babel-core": "6.26.3",
+    "babel-eslint": "7.2.3",
+    "babel-jest": "21.2.0",
+    "babel-loader": "7.1.4",
+    "babel-plugin-react-intl": "2.3.1",
+    "babel-plugin-transform-class-properties": "6.24.1",
+    "babel-plugin-transform-decorators-legacy": "1.3.5",
+    "babel-plugin-transform-object-rest-spread": "6.26.0",
+    "babel-plugin-transform-runtime": "6.23.0",
+    "babel-preset-airbnb": "2.4.0",
+    "babel-preset-env": "1.7.0",
+    "babel-preset-react": "6.24.1",
+    "babel-preset-react-hmre": "1.1.1",
+    "babel-register": "6.26.0",
+    "clean-webpack-plugin": "0.1.19",
+    "compression-webpack-plugin": "1.1.11",
+    "css-loader": "0.28.11",
+    "enzyme": "3.2.0",
+    "enzyme-adapter-react-16": "1.1.0",
+    "enzyme-to-json": "3.3.3",
+    "eslint": "3.19.0",
+    "eslint-config-airbnb": "15.0.1",
+    "eslint-config-prettier": "2.9.0",
+    "eslint-import-resolver-webpack": "0.10.1",
+    "eslint-loader": "1.9.0",
+    "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-jsx-a11y": "5.1.1",
+    "eslint-plugin-prettier": "2.6.0",
+    "eslint-plugin-react": "7.11.1",
+    "extract-text-webpack-plugin": "3.0.2",
+    "file-loader": "1.1.11",
     "html-webpack-plugin": "2.22.0",
-    "husky": "^0.14.3",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^21.2.1",
-    "lint-staged": "^7.1.0",
-    "node-sass": "^4.9.0",
-    "postcss-loader": "^2.1.5",
-    "prettier": "^1.12.1",
-    "raw-loader": "^0.5.1",
-    "react-addons-test-utils": "^15.6.2",
-    "react-intl-translations-manager": "^5.0.3",
-    "sass-loader": "^6.0.7",
-    "sass-resources-loader": "^1.3.3",
-    "style-loader": "^0.19.0",
-    "svg-inline-loader": "^0.8.0",
-    "url-loader": "^0.6.2",
-    "webpack": "^3.7.1",
-    "webpack-dev-server": "2.9.7",
-    "webpack-hot-middleware": "^2.22.1",
-    "webpack-notifier": "^1.6.0"
+    "identity-obj-proxy": "3.0.0",
+    "jest": "21.2.1",
+    "lint-staged": "7.3.0",
+    "moment-locales-webpack-plugin": "1.0.7",
+    "node-sass": "4.9.4",
+    "postcss-loader": "2.1.5",
+    "prettier": "1.14.3",
+    "raw-loader": "0.5.1",
+    "react-addons-test-utils": "15.6.2",
+    "react-hot-loader": "4.3.11",
+    "react-intl-translations-manager": "5.0.3",
+    "redux-devtools-extension": "2.13.5",
+    "sass-loader": "7.1.0",
+    "sass-resources-loader": "1.3.4",
+    "style-loader": "0.23.1",
+    "svg-inline-loader": "0.8.0",
+    "url-loader": "1.1.2",
+    "webpack": "3.12.0",
+    "webpack-dev-server": "2.11.3",
+    "webpack-hot-middleware": "2.22.1",
+    "webpack-notifier": "1.7.0"
   },
   "jest": {
     "setupFiles": [
