--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -41,6 +41,11 @@ http {
         server drill-admin:8090;
     }
 
+    map $http_upgrade $connection_upgrade {
+        default upgrade;
+        ''      close;
+    }
+
     server {
         listen 80;
         
@@ -70,6 +75,13 @@ http {
             proxy_send_timeout 30s;
             access_log /var/log/nginx/api_access.log;
         }
+
+        location /ws/ {
+            proxy_pass http://drill-admin;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection $connection_upgrade;
+	    }
     }
 
     server {
