change back-end proxy_pass from docker network to const value

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -64,7 +64,7 @@ http {
         }
 
         location /api/ {
-            proxy_pass http://drill-admin;
+            proxy_pass http://ecsc00a04143.epam.com:8090;
 
             proxy_http_version 1.1;
             proxy_cache_bypass $http_upgrade;
@@ -77,7 +77,7 @@ http {
         }
 
         location /ws/ {
-            proxy_pass http://drill-admin;
+            proxy_pass http://ecsc00a04143.epam.com:8090;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection $connection_upgrade;
