--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react-dom": "16.8.3",
     "@types/react-router-dom": "4.3.1",
     "axios": "0.18.0",
+    "cbor": "^4.1.5",
     "final-form": "4.13.1",
     "final-form-calculate": "1.3.1",
     "react": "16.8.6",
