--- a/.drone.yml
+++ b/.drone.yml
@@ -1,8 +1,26 @@
-pipeline:
-  build:
+kind: pipeline
+name: default
+
+steps:
+  - name: build
     image: node:8
     commands:
       - yarn
       - yarn test
       - yarn typecheck
       - yarn lint
+
+  - name: docker
+    image: plugins/docker
+    settings:
+      repo: drill4j/admin-ui
+      username:
+        from_secret: drill_username
+      password:
+        from_secret: drill_password
+    when:
+      branch:
+        - develop
+      event:
+        exclude:
+          - pull_request
