--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "0.18.0",
     "final-form": "4.13.1",
     "final-form-calculate": "1.3.1",
+    "lodash.assignwith": "4.2.0",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-final-form": "6.0.1",
@@ -39,6 +40,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@types/lodash.assignwith": "4.2.6",
     "husky": "1.3.1",
     "lint-staged": "8.1.5",
     "node-sass": "4.11.0",
