--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,20 +10,24 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
+      - name: Get the version
+        id: get_version
+        run: echo ::set-output name=VERSION::$(echo $GITHUB_REF | cut -d / -f 3)
       - name: Publish to Registry
         uses: elgohr/Publish-Docker-Github-Action@master
         env:
           ENV: development
+          VERSION: ${{ steps.get_version.outputs.VERSION }}
         with:
           name: drill4j/admin-ui
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
           tag_names: true
-          buildargs: ENV
+          buildargs: ENV,VERSION
       - uses: jerray/publish-docker-action@master
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
           repository: drill4j/admin-ui
           tags: latest
-          build_args: ENV=development
+          build_args: ENV=development,VERSION=${{ steps.get_version.outputs.VERSION }}
