--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "5.1.2",
     "react-scripts": "3.2.0",
     "react-tiny-virtual-list": "2.2.0",
+    "react-visibility-sensor": "5.1.1",
     "typescript": "3.7.2"
   },
   "scripts": {
