--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,5 +1,3 @@
-user nginx;
-
 worker_processes auto;
 
 events {
@@ -12,12 +10,6 @@ http {
     root /usr/src/app/build;
 
     sendfile on;
-
-    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-    ssl_ciphers HIGH:!aNULL:!MD5;
-    ssl_session_cache shared:SSL:10m;
-    ssl_session_timeout 10m;
-
 
     gzip on;
     gzip_disable "msie6";
@@ -44,7 +36,7 @@ http {
         image/svg+xml;
 
     upstream drill-admin {
-        server drill-admin:8443;
+        server drill-admin:8090;
     }
 
     map $http_upgrade $connection_upgrade {
@@ -53,10 +45,7 @@ http {
     }
 
     server {
-        listen 443 ssl;
-
-        ssl_certificate /etc/nginx/ssl/drill4j.crt;
-        ssl_certificate_key /etc/nginx/ssl/drill4j.key;
+        listen 8080;
         
         keepalive_timeout 70;
 
@@ -73,12 +62,7 @@ http {
         }
 
         location /api/ {
-            proxy_pass https://drill-admin;
-
-            proxy_ssl_trusted_certificate /etc/nginx/ssl/drill4j.crt;
-            proxy_ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-            proxy_ssl_ciphers HIGH:!aNULL:!MD5;
-            proxy_ssl_session_reuse on;
+            proxy_pass http://drill-admin;
 
             proxy_http_version 1.1;
             proxy_cache_bypass $http_upgrade;
@@ -91,15 +75,10 @@ http {
         }
 
         location /ws/ {
-            proxy_pass https://drill-admin;
+            proxy_pass http://drill-admin;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection $connection_upgrade;
-
-            proxy_ssl_trusted_certificate /etc/nginx/ssl/drill4j.crt;
-            proxy_ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-            proxy_ssl_ciphers HIGH:!aNULL:!MD5;
-            proxy_ssl_session_reuse on;
 	    }
     }
 }
