EPMDJ-2048: added docker multi-stage build
Issue: EPMDJ-2048

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,7 +7,7 @@ events {
 http {
     include /etc/nginx/mime.types;
 
-    root /usr/src/app/build;
+    root /usr/share/nginx/html;
 
     sendfile on;
 
