EPMDJ-2253: Changed color of selected items from yellow to gray
Issue: EPMDJ-2253

--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
       "eslint . --ext .ts,.tsx --fix",
       "git add"
     ],
-    "*.{sass,md}": [
+    "*.{scss,md}": [
       "prettier --write",
       "git add"
     ]
