EPMDJ-2190: added tests-to-run modal to service group dashboard
Issue: EPMDJ-2190

--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
   },
   "lint-staged": {
     "*.{ts,tsx}": [
-      "eslint . --ext .ts,.tsx --fix",
+      "eslint --fix",
       "git add"
     ],
     "*.{scss,md}": [
