--- a/.eslintrc
+++ b/.eslintrc
@@ -36,6 +36,7 @@
     "jsx-a11y/no-static-element-interactions": 0,
     "operator-linebreak": 0,
     "implicit-arrow-linebreak": 0,
-    "jsx-a11y/label-has-associated-control": 0
+    "jsx-a11y/label-has-associated-control": 0,
+    "react/jsx-one-expression-per-line": 0
   }
 }
