--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "final-form": "4.18.6",
     "lodash.assignwith": "4.2.0",
     "nanoid": "2.1.9",
+    "query-string": "6.10.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-final-form": "6.3.3",
