--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -9,9 +9,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
-      - name: Bump version and push tag
-        uses: anothrNick/github-tag-action@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.TOKEN }}
-          DEFAULT_BUMP: patch
-          RELEASE_BRANCHES: develop
+      - name: Next Prerelease SemVer
+        id: next_semver
+        uses: Drill4J/semver-tag-action@v0.1.0
+        with:
+          type: prerelease
+      - name: Tag commit
+        uses: tvdias/github-tagger@v0.0.1
+        with:
+          repo-token: ${{ secrets.TOKEN }}
+          tag: ${{ steps.next_semver.outputs.tag }}
