--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,20 +14,10 @@ jobs:
         id: get_version
         run: echo ::set-output name=VERSION::$(echo $GITHUB_REF | cut -d / -f 3 | cut -c 2-)
       - name: Publish to Registry
-        uses: elgohr/Publish-Docker-Github-Action@master
-        env:
-          ENV: development
-          VERSION: ${{ steps.get_version.outputs.VERSION }}
-        with:
-          name: drill4j/admin-ui
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          tag_names: true
-          buildargs: ENV,VERSION
-      - uses: jerray/publish-docker-action@master
+        uses: jerray/publish-docker-action@master
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
           repository: drill4j/admin-ui
-          tags: latest
+          tags: latest,${{ steps.get_version.outputs.VERSION }}
           build_args: ENV=development,VERSION=${{ steps.get_version.outputs.VERSION }}
