EPMDJ-2068. Upstream setting has been set via including template and "envsubst" injection.

--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -8,7 +8,7 @@ jobs:
   bump:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v1
       - name: Next Prerelease SemVer
         id: next_semver
         uses: Drill4J/semver-tag-action@v0.1.0
