--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,6 +6,7 @@ events {
 
 http {
     include /etc/nginx/mime.types;
+    include /etc/nginx/upstream.conf;
 
     root /usr/share/nginx/html;
 
@@ -34,10 +35,6 @@ http {
         application/xml
         application/rss+xml
         image/svg+xml;
-
-    upstream drill-admin {
-        server drill-admin:8090;
-    }
 
     map $http_upgrade $connection_upgrade {
         default upgrade;
