--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-scripts": "3.4.0",
     "react-tiny-virtual-list": "2.2.0",
     "react-visibility-sensor": "5.1.1",
+    "timeago.js": "4.0.2",
     "typescript": "3.8.3"
   },
   "scripts": {
