--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "eslint-plugin-react": "7.19.0",
     "husky": "4.2.3",
     "lint-staged": "10.0.8",
-    "node-sass": "4.13.1",
+    "node-sass": "^4.14.1",
     "prettier": "1.19.1"
   },
   "husky": {
