--- a/.eslintrc
+++ b/.eslintrc
@@ -29,6 +29,7 @@
     "@typescript-eslint/explicit-function-return-type": 0,
     "max-len": ["error", { "code": 140 }],
     "@typescript-eslint/no-use-before-define": 0,
+    "no-use-before-define": 0,
     "@typescript-eslint/no-empty-function": 0,
     "no-unused-expressions": 0,
     "react/jsx-props-no-spreading": 0,
