--- a/package.json
+++ b/package.json
@@ -8,25 +8,25 @@
     "@drill4j/ui-kit": "0.1.23",
     "@redneckz/react-bem-helper": "2.0.4",
     "@redneckz/react-devirt": "0.0.6",
-    "@types/jest": "25.1.4",
-    "@types/node": "13.9.1",
+    "@types/jest": "26.0.13",
+    "@types/node": "14.6.4",
     "@types/react": "16.9.23",
     "@types/react-dom": "16.9.5",
     "@types/react-router-dom": "5.1.3",
-    "axios": "0.19.2",
+    "axios": "0.20.0",
     "final-form": "4.18.7",
     "lodash.assignwith": "4.2.0",
-    "nanoid": "2.1.11",
+    "nanoid": "3.1.12",
     "query-string": "6.13.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-final-form": "6.3.5",
     "react-router-dom": "5.1.2",
-    "react-scripts": "3.4.0",
+    "react-scripts": "^3.4.3",
     "react-tiny-virtual-list": "2.2.0",
     "react-visibility-sensor": "5.1.1",
     "timeago.js": "4.0.2",
-    "typescript": "3.8.3"
+    "typescript": "4.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -48,9 +48,10 @@
   "devDependencies": {
     "@types/lodash.assignwith": "4.2.6",
     "@types/nanoid": "2.1.0",
-    "@typescript-eslint/eslint-plugin": "2.24.0",
-    "@typescript-eslint/parser": "2.24.0",
-    "eslint": "6.8.0",
+    "@types/resize-observer-browser": "^0.1.3",
+    "@typescript-eslint/eslint-plugin": "4.0.1",
+    "@typescript-eslint/parser": "4.0.1",
+    "eslint": "6.6.0",
     "eslint-config-airbnb": "18.1.0",
     "eslint-config-prettier": "6.10.0",
     "eslint-import-resolver-typescript": "2.0.0",
@@ -61,8 +62,8 @@
     "eslint-plugin-react": "7.19.0",
     "husky": "4.2.3",
     "lint-staged": "10.0.8",
-    "node-sass": "^4.14.1",
-    "prettier": "1.19.1"
+    "node-sass": "4.14.1",
+    "prettier": "2.1.1"
   },
   "husky": {
     "hooks": {
