--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "16.9.8",
     "@types/react-router-dom": "5.1.5",
     "axios": "0.20.0",
+    "bootstrap": "^4.5.3",
     "final-form": "4.20.1",
     "lodash.assignwith": "4.2.0",
     "nanoid": "3.1.12",
