--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "private": true,
   "dependencies": {
     "@drill4j/socket": "0.1.11",
-    "@drill4j/ui-kit": "0.1.57",
+    "@drill4j/ui-kit": "0.1.58",
     "@redneckz/react-bem-helper": "2.0.4",
     "@redneckz/react-devirt": "0.0.6",
     "@types/jest": "26.0.14",
     "@types/node": "14.11.2",
-    "@types/react": "16.9.49",
-    "@types/react-dom": "16.9.8",
+    "@types/react": "17.0.0",
+    "@types/react-dom": "17.0.0",
     "@types/react-router-dom": "5.1.5",
     "axios": "0.20.0",
     "bootstrap": "^4.5.3",
@@ -19,15 +19,15 @@
     "lodash.assignwith": "4.2.0",
     "nanoid": "3.1.12",
     "query-string": "6.13.2",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-final-form": "6.5.1",
     "react-router-dom": "5.2.0",
-    "react-scripts": "^3.4.3",
+    "react-scripts": "^4.0.1",
     "react-tiny-virtual-list": "2.2.0",
     "react-visibility-sensor": "5.1.1",
     "timeago.js": "4.0.2",
-    "typescript": "4.0.3"
+    "typescript": "4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -52,7 +52,7 @@
     "@types/resize-observer-browser": "^0.1.3",
     "@typescript-eslint/eslint-plugin": "4.0.1",
     "@typescript-eslint/parser": "4.0.1",
-    "eslint": "6.6.0",
+    "eslint": "7.11.0",
     "eslint-config-airbnb": "18.1.0",
     "eslint-config-prettier": "6.10.0",
     "eslint-import-resolver-typescript": "2.0.0",
@@ -60,7 +60,7 @@
     "eslint-plugin-json": "2.1.1",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-prettier": "3.1.2",
-    "eslint-plugin-react": "7.19.0",
+    "eslint-plugin-react": "7.22.0",
     "husky": "4.2.3",
     "lint-staged": "10.0.8",
     "node-sass": "4.14.1",
