--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "license": "Apache-2.0",
   "private": true,
   "dependencies": {
-    "@drill4j/socket": "0.1.11",
     "@drill4j/ui-kit": "0.1.58",
     "@redneckz/react-bem-helper": "2.0.4",
     "@redneckz/react-devirt": "0.0.6",
@@ -13,7 +12,7 @@
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
     "@types/react-router-dom": "5.1.5",
-    "axios": "0.20.0",
+    "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
     "final-form": "4.20.1",
     "lodash.assignwith": "4.2.0",
@@ -26,6 +25,7 @@
     "react-scripts": "^4.0.1",
     "react-tiny-virtual-list": "2.2.0",
     "react-visibility-sensor": "5.1.1",
+    "rxjs": "^6.6.3",
     "timeago.js": "4.0.2",
     "typescript": "4.1.3"
   },
