--- a/.eslintrc
+++ b/.eslintrc
@@ -42,6 +42,8 @@
     "react/jsx-uses-react": 0,
     "react/react-in-jsx-scope": 0,
     "react/no-unused-prop-types": 0,
-    "react/require-default-props": 0
+    "react/require-default-props": 0,
+    "@typescript-eslint/explicit-module-boundary-types": 0,
+    "@typescript-eslint/no-explicit-any": 0
   }
 }
