--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -41,6 +41,8 @@ http {
         ''      close;
     }
 
+    send_timeout 180s;
+
     server {
         listen 8080;
         
@@ -67,7 +69,7 @@ http {
             proxy_intercept_errors on;
             proxy_connect_timeout 5s;
             proxy_read_timeout 180s;
-            proxy_send_timeout 90s;
+            proxy_send_timeout 180s;
             access_log /var/log/nginx/api_access.log;
         }
 
