--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -41,7 +41,7 @@ http {
         ''      close;
     }
 
-    send_timeout 180s;
+    send_timeout 600;
 
     server {
         listen 8080;
@@ -67,9 +67,9 @@ http {
             proxy_cache_bypass $http_upgrade;
             proxy_set_header Host $http_host;
             proxy_intercept_errors on;
-            proxy_connect_timeout 5s;
-            proxy_read_timeout 180s;
-            proxy_send_timeout 180s;
+            proxy_connect_timeout 600;
+            proxy_read_timeout 600;
+            proxy_send_timeout 600;
             access_log /var/log/nginx/api_access.log;
         }
 
