--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
     "@types/react-router-dom": "5.1.5",
+    "autoprefixer": "^10.2.4",
     "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
     "final-form": "4.20.1",
     "lodash.assignwith": "4.2.0",
     "nanoid": "3.1.12",
+    "postcss": "^8.2.4",
     "query-string": "6.13.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -26,16 +28,18 @@
     "react-tiny-virtual-list": "2.2.0",
     "react-visibility-sensor": "5.1.1",
     "rxjs": "^6.6.3",
+    "tailwindcss": "^2.0.2",
     "timeago.js": "4.0.2",
     "typescript": "4.1.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "npm run tailwind:css && react-scripts start",
+    "build": "NODE_ENV=production npm run tailwind:css && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "typecheck": "tsc --project tsconfig.json --noEmit --skipLibCheck",
-    "lint": "eslint . --ext .ts,.tsx"
+    "lint": "eslint . --ext .ts,.tsx",
+    "tailwind:css": "tailwind build src/tailwind.css -c tailwind.config.js -o src/index.css"
   },
   "eslintConfig": {
     "extends": "react-app"
