--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "@redneckz/react-devirt": "0.0.6",
     "@types/jest": "26.0.14",
     "@types/node": "14.11.2",
-    "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
     "@types/react-router-dom": "5.1.5",
     "autoprefixer": "^10.2.4",
@@ -27,8 +26,10 @@
     "react-tiny-virtual-list": "2.2.0",
     "react-visibility-sensor": "5.1.1",
     "rxjs": "^6.6.3",
+    "styled-components": "^5.2.1",
     "tailwindcss": "^2.0.2",
     "timeago.js": "4.0.2",
+    "twin.macro": "^2.2.0",
     "typescript": "4.1.3"
   },
   "scripts": {
@@ -52,7 +53,9 @@
   "devDependencies": {
     "@types/lodash.assignwith": "4.2.6",
     "@types/nanoid": "2.1.0",
+    "@types/react": "^17.0.0",
     "@types/resize-observer-browser": "^0.1.3",
+    "@types/styled-components": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "4.0.1",
     "@typescript-eslint/parser": "4.0.1",
     "eslint": "7.11.0",
