--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.21.1",
     "final-form": "4.20.1",
     "lodash.assignwith": "4.2.0",
+    "lodash.debounce": "^4.0.8",
     "nanoid": "3.1.12",
     "postcss": "^8.2.4",
     "query-string": "6.13.2",
@@ -52,6 +53,7 @@
   ],
   "devDependencies": {
     "@types/lodash.assignwith": "4.2.6",
+    "@types/lodash.debounce": "^4.0.6",
     "@types/nanoid": "2.1.0",
     "@types/react": "^17.0.0",
     "@types/resize-observer-browser": "^0.1.3",
