--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-final-form": "6.5.1",
     "react-router-dom": "5.2.0",
     "react-scripts": "^4.0.1",
+    "react-table": "^7.7.0",
     "react-tiny-virtual-list": "2.2.0",
     "react-visibility-sensor": "5.1.1",
     "rxjs": "^6.6.3",
@@ -55,6 +56,7 @@
     "@types/lodash.debounce": "^4.0.6",
     "@types/nanoid": "2.1.0",
     "@types/react": "^17.0.0",
+    "@types/react-table": "^7.0.29",
     "@types/resize-observer-browser": "^0.1.3",
     "@types/styled-components": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "4.0.1",
