--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "lodash.debounce": "^4.0.8",
     "nanoid": "3.1.12",
     "postcss": "^8.2.4",
-    "query-string": "6.13.2",
+    "query-string": "^6.13.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-final-form": "6.5.1",
