--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "Apache-2.0",
   "private": true,
   "dependencies": {
-    "@drill4j/ui-kit": "0.1.71",
+    "@drill4j/ui-kit": "0.1.74",
     "@redneckz/react-devirt": "0.0.6",
     "@types/jest": "26.0.14",
     "@types/node": "14.11.2",
@@ -23,6 +23,7 @@
     "react-final-form": "6.5.1",
     "react-router-dom": "5.2.0",
     "react-scripts": "^4.0.1",
+    "react-table": "^7.7.0",
     "react-tiny-virtual-list": "2.2.0",
     "react-visibility-sensor": "5.1.1",
     "rxjs": "^6.6.3",
@@ -55,8 +56,9 @@
     "@types/lodash.debounce": "^4.0.6",
     "@types/nanoid": "2.1.0",
     "@types/react": "^17.0.0",
+    "@types/react-table": "^7.7.0",
     "@types/resize-observer-browser": "^0.1.3",
-    "@types/styled-components": "^5.1.7",
+    "@types/styled-components": "^5.1.9",
     "@typescript-eslint/eslint-plugin": "4.0.1",
     "@typescript-eslint/parser": "4.0.1",
     "eslint": "7.11.0",
