--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "Apache-2.0",
   "private": true,
   "dependencies": {
-    "@drill4j/ui-kit": "0.1.71",
+    "@drill4j/ui-kit": "0.1.72-bar-hotfix",
     "@redneckz/react-devirt": "0.0.6",
     "@types/jest": "26.0.14",
     "@types/node": "14.11.2",
