--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "dependencies": {
     "@drill4j/ui-kit": "0.1.76",
     "@types/jest": "26.0.14",
+    "@types/lodash.debounce": "^4.0.6",
+    "@types/nanoid": "2.1.0",
     "@types/node": "14.11.2",
+    "@types/react": "^17.0.0",
     "@types/react-dom": "17.0.0",
     "@types/react-router-dom": "5.1.5",
-    "@types/nanoid": "2.1.0",
-    "@types/react": "^17.0.0",
-    "@types/lodash.debounce": "^4.0.6",
+    "@types/react-table": "^7.7.0",
     "@types/styled-components": "^5.1.9",
     "autoprefixer": "^10.2.4",
     "axios": "^0.21.1",
@@ -23,11 +24,11 @@
     "query-string": "^6.13.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-error-boundary": "^3.1.3",
     "react-final-form": "6.5.1",
     "react-router-dom": "5.2.0",
     "react-scripts": "^4.0.1",
     "react-table": "^7.7.0",
-    "@types/react-table": "^7.7.0",
     "react-tiny-virtual-list": "2.2.0",
     "rxjs": "^6.6.3",
     "styled-components": "^5.2.1",
