--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,11 +13,20 @@ jobs:
       - name: Get the version
         id: get_version
         run: echo ::set-output name=VERSION::$(echo $GITHUB_REF | cut -d / -f 3 | cut -c 2-)
-      - name: Publish to Registry
+      - name: Publish to Docker Hub Registry
         uses: jerray/publish-docker-action@master
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+          repository: drill4j/admin-ui
+          tags: latest,${{ steps.get_version.outputs.VERSION }}
+          build_args: ENV=development,VERSION=${{ steps.get_version.outputs.VERSION }}
+      - name: Publish to GitHub Container registry
+        uses: jerray/publish-docker-action@master
+        with:
+          username: ${{ secrets.GH_PACKAGE_USERNAME }}
+          password: ${{ secrets.GH_PACKAGE_TOKEN }}
+          registry: ghcr.io
           repository: drill4j/admin-ui
           tags: latest,${{ steps.get_version.outputs.VERSION }}
           build_args: ENV=development,VERSION=${{ steps.get_version.outputs.VERSION }}
