--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "@drill4j/ui-kit": "^0.1.79",
+    "@material-ui/core": "^4.11.4",
     "@types/jest": "26.0.14",
     "@types/lodash.debounce": "^4.0.6",
     "@types/nanoid": "2.1.0",
