--- a/package.json
+++ b/package.json
@@ -4,37 +4,37 @@
   "license": "Apache-2.0",
   "private": true,
   "dependencies": {
-    "@drill4j/ui-kit": "0.1.82",
+    "@drill4j/ui-kit": "0.1.87",
     "@types/jest": "26.0.14",
-    "@types/lodash.debounce": "^4.0.6",
+    "@types/lodash.debounce": "4.0.6",
     "@types/nanoid": "2.1.0",
     "@types/node": "14.11.2",
-    "@types/react": "^17.0.0",
+    "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
     "@types/react-router-dom": "5.1.5",
-    "@types/react-table": "^7.7.0",
-    "@types/styled-components": "^5.1.9",
-    "autoprefixer": "^10.2.4",
-    "axios": "^0.21.1",
+    "@types/react-table": "7.7.0",
+    "@types/styled-components": "5.1.9",
+    "autoprefixer": "10.2.4",
+    "axios": "0.21.1",
     "final-form": "4.20.1",
     "lodash.assignwith": "4.2.0",
-    "lodash.debounce": "^4.0.8",
+    "lodash.debounce": "4.0.8",
     "nanoid": "3.1.12",
-    "postcss": "^8.2.4",
-    "query-string": "^6.13.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-error-boundary": "^3.1.3",
+    "postcss": "8.2.4",
+    "query-string": "6.13.2",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-error-boundary": "3.1.3",
     "react-final-form": "6.5.1",
     "react-router-dom": "5.2.0",
-    "react-scripts": "^4.0.1",
-    "react-table": "^7.7.0",
+    "react-scripts": "4.0.1",
+    "react-table": "7.7.0",
     "react-tiny-virtual-list": "2.2.0",
-    "rxjs": "^6.6.3",
-    "styled-components": "^5.2.1",
-    "tailwindcss": "^2.2.2",
+    "rxjs": "6.6.3",
+    "styled-components": "5.2.1",
+    "tailwindcss": "2.2.2",
     "timeago.js": "4.0.2",
-    "twin.macro": "^2.2.0",
+    "twin.macro": "2.2.0",
     "typescript": "4.1.3"
   },
   "scripts": {
@@ -57,7 +57,7 @@
   ],
   "devDependencies": {
     "@types/lodash.assignwith": "4.2.6",
-    "@types/resize-observer-browser": "^0.1.3",
+    "@types/resize-observer-browser": "0.1.3",
     "@typescript-eslint/eslint-plugin": "4.0.1",
     "@typescript-eslint/parser": "4.0.1",
     "eslint": "7.11.0",
